--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -608,7 +608,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return true when button is pressed}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ??}\\\hline
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{User Interface Button Test}
 \end{table}
