--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -76,7 +76,7 @@
 \end{figure}
 \newpage
 \section{Executive Summary of Testing}
-The testing completed on February 17th, 2018 has yielded 44 passes and 9 failures. The failures in their entirety can be attributed to features not yet implemented including; automated roll and pitch as well as the machine learning model. Given that the failure rate is roughly 17\%, the team does not recommend operation of the project at this time. \\ \\
+The testing completed on February 17th, 2018 has yielded 44 passes, 10 failures, and 3 pending. Pending tests have not been executed due to lack of relevnce at this stage. The failures in their entirety can be attributed to features that are in progress or that have not yet been implemented including; automated roll and pitch as well as the machine learning model. Given that the failure rate is roughly 17\%, the team does not recommend operation of the project at this time. \\ \\
 An important note to consider is that most errors are localized in the Shooting Mechanism and ShotRecommender subsystems. The team would also like to expand testing further to have higher coverage of the system and increase their confidence in its reliability. \\ \\
 The team will continue developing the system until March 9th where tests will be redefined and added to satisfy the team's ideals. After which, the second round of testing will commence. 
 \section{Introduction}
@@ -217,6 +217,23 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{table}
 \end{center}
 
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC6	&Status: PENDING\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Shut Off Power Switch Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Switch on the machine cuts power to the system in case of an emergent situation}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Systems shuts off when flicking the switch}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Machine must be on}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Power shuts off when the switch is used
+}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: N/A}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: System is off}\\\hline
+\end{tabular}
+\caption{Shut Off Power Switch Test}
+\end{table}
+\end{center}
+
 \subsection{Software Subsystems}
 \subsubsection{Computer Vision}
 
@@ -280,7 +297,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV tracks the ball in motion}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
-\caption{ball upward detection Test}
+\caption{Ball Rightward Detection Test}
 \end{table}
 \end{center}
 
@@ -296,7 +313,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV tracks the ball in motion}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
-\caption{ball upward detection Test}
+\caption{Ball Leftward Detection Test}
 \end{table}
 \end{center}
 
@@ -312,7 +329,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Times out in 8 seconds}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: cvmodule is closed}\\\hline
 \end{tabular}
-\caption{cvmodule timeout test}
+\caption{CV Timeout Test}
 \end{table}
 \end{center}
 
@@ -368,7 +385,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
 	Test ID: CV10	&Status: PASS\\[-3mm]
-	\multicolumn{2}{|c|}{\textbf{\large{Sends Hit Signal to SmartServe}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Hit Signal to SmartServe Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Tests that the CV Subsystem sends a ``GOOD" signal to SmartServe}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: N/A}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: CV is in state 3}\\[4mm]
@@ -376,7 +393,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: ``GOOD" signal sent to SmartServe}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: CV is in state 0}\\\hline
 \end{tabular}
-\caption{good signal test}
+\caption{Hit Signal to SmartServe Test}
 \end{table}
 \end{center}
 
@@ -580,6 +597,22 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{table}
 \end{center}
 
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: DS5	&Status: PENDING\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Statistics Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage provides return rate given a time frame}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Returns return information given a range of time stamp inputs }\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The SQL database is running on port 3306.}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Time stamp range }\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return stats within the inputed range}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: N/A}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{Data Storage Statistics Test}
+\end{table}
+\end{center}
+
 \subsubsection{User Interface} %Sharon
 
 \begin{center}
@@ -644,6 +677,55 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{User Interface Sign up Test}
+\end{table}
+\end{center}
+
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI4	&Status: FAIL \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Sign up Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: When signup button is pressed, user is added with given parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: User inputs are sent to Data Storage}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return user parameters}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Page not implemented}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{User Interface Sign up Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI5	&Status: FAIL \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Log In Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: When login button is pressed, user is authenticated}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: User inputs are sent to Data Storage}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return true if password matches user name}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Page not implemented}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{User Interface Log In Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI6	&Status: PENDING \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Statistics Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Statistics show on page}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Relevant page shows when statistics tab is pressed}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Statistics page displays}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: N/A}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{User Interface Statistics Test}
 \end{table}
 \end{center}
 
